<resources>
    <string name="app_name">健康监测仪</string>
    <string name="multi_functional_health_detector">多功能健康检测仪</string>
    <string name="click_connect">点此连接</string>
    <string name="home_page">首页</string>
    <string name="history">历史</string>
    <string name="mine">我的</string>
    <string name="ecg">心电</string>
    <string name="blood_pressure">血压</string>
    <string name="blood_oxygen">血氧</string>
    <string name="body_temperature">体温</string>
    <string name="back">返回</string>
    <string name="leak_and_check">存在漏气，请检查气路，重新测量。</string>
    <string name="measurement_void">测量过程中请保持安静，此次测量作废，请重新测量。</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_password">请输入密码</string>
    <string name="btn_login">登陆</string>
    <string name="registered">立即注册</string>
    <string name="register">注册</string>
    <string name="maximum_of_pwd_num">输入6~30位字母或数字</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="net_error">网络异常，请检查网络!</string>
    <string name="save_success">保存成功!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
